test/data/resolver/valid/with_carry_binding.cypher
MATCH (a:Person) WITH a MATCH (a)-[:AUTHORED]->(b:Post) RETURN a, b
