test/data/resolver/invalid/part_binding_type_conflict_edge.cypher
MATCH (a:Person)-[r:KNOWS]->(b:Person) WITH r MATCH (x:Person)-[r:LIKES]->(y:Post) RETURN r
